test/message/syntactic-tail-call-in-try-try-catch-finally.out
*%(basename)s:16: SyntaxError: Tail call expression in try block.
      return continue f();
             ^
SyntaxError: Tail call expression in try block.
